# hackindia-spark-7-north-region-aksh

./: .gitignore  README.md  ROADMAP.md
backend/: index.js  package-lock.json  package.json
backend/blockchain/: sync.js
backend/db/: db.js
backend/hub/: server.js
backend/model/: model.js
backend/notary/: attestation.js  notary-keypair.json  package-lock.json  package.json  server.js
backend/utils/: logger.js  script.js
blockchain/programs/watchtower/: Cargo.toml
blockchain/programs/watchtower/src/: lib.rs
config/: config.json
frontend/: package-lock.json  package.json  tailwind.config.js  test-req.cjs
frontend/src/: App.jsx  index.css
frontend/src/components/: Globe3DDemo.jsx  Hero.jsx  Navbar.jsx
frontend/src/components/monitor/: DetailsDashboard.tsx  MonitorDetails.tsx  RecentEvents.tsx  ValidatorMap.tsx
frontend/src/pages/: Dashboard.tsx  Monitor.tsx  SignupValidator.jsx  ValidatorDashboard.jsx
tests/: meshnet-simulator.js  package-lock.json  package.json  test-req.js
validator-cli/: LICENSE  README.md  package-lock.json  package.json
validator-cli/src/: cli.js  connection.js  validator.js
