[package]
name = "watchtower"
version = "0.1.0"
description = "WatchTower dPIN Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "watchtower"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
